# OHT_V2

./: .coverage  .cursorignore  .gitattributes  .gitignore  .gitignore.bak  BACKEND_FIRMWARE_INTEGRATION_REPORT.md  EMBED_FINAL_REPORT.md  EMBED_GPIO_CHECK_REPORT.md  FW_PHASE2_IMPLEMENTATION_ORDERS.md  FW_TEAM_WEBSOCKET_FIX_ORDER.md  ISSUE_CLOSURE_SUMMARY.md  MIGRATION_COMPLETE.md  PHASE_2_2_INTEGRATION_DESIGN.md  PR_CREATION_GUIDE.md  PR_CREATION_INSTRUCTIONS.md  PR_DESCRIPTION.md  PR_FIRMWARE_ISO_STANDARDIZATION.md  PR_SUMMARY.md  PR_TEMPLATE.md  README.md  SAFETY_MONITOR_IMPLEMENTATION_SUCCESS_REPORT.md  STATE_MACHINE_API_IMPLEMENTATION_GUIDE.md  SYSTEM_STATE_MACHINE_ANALYSIS.md  WIFI_AP_STATUS_REPORT.md  backend_issue.json  bug_report.json  create_pr.bat  create_pr.json  create_pr.ps1  create_pr_manual.ps1  create_pr_simple.ps1  create_roaming_issue.json  error_analysis_report.md  firmware_mock_data_issue.md  fix_dnsmasq.sh  fw_api_test_report_20250827_181908.json  fw_api_test_report_20250827_182103.json  github_issues_summary.md  gpio_test_safe.sh  h origin FW-Phase-3-1  (+25 more)
OHT-50/firmware/: CMakeLists.txt  README.md
backend/: .coverage  .env  .env.backup  .gitignore  API_TEST_RESULTS.md  BACKEND_STRUCTURE_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  DEVELOPMENT_PROGRESS.md  ISSUE_204_IMPLEMENTATION_SUMMARY.md  PHASE_1_FOUNDATION_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_PROGRESS_REPORT.md  PHASE_3_PROGRESS_REPORT_2025-01-28.md  QA_QC_REPORT_ACTUAL_STATUS.md  README.md  STAKEHOLDER_REVIEW_PHASE_2.md  WEEK_3_QA_QC_FINAL_REPORT.md  alembic.ini  check_test_db.py  check_users.py  close_issues_200_208.ps1  debug_500_errors.py  debug_auth.py  debug_remaining_500.py  docker-compose.yml  env.example  fix_database.py  get_token.py  monitor_performance.py  oht50.db  oht50.db-shm  oht50.db-wal  openapi.json  pyproject.toml  pytest.ini  requirements.txt  reset_admin.py  run_production.ps1  setup_database.py  simple_server.py  (+13 more)
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/configs/: audit.json  current.json  users.json
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: API_DOCUMENTATION.md  API_REGISTER_SYNC.md  INDEX.md  ISSUE_176_FRONTEND_GUIDE.md  ISSUE_176_IMPLEMENTATION.md  JWT_AUTHENTICATION_FIX_REPORT.md  SECURITY_SETUP.md  WEBSOCKET_ALERTS_IMPLEMENTATION.md  api.md  network-integration-implementation.md
backend/lib/: fw_protocol.py
backend/scripts/: INDEX.md  generate_jwt_secret.py  test_endpoints.py
backend/tests/: __init__.py  conftest.py  test_center.py  test_config.py  test_network_api.py  test_network_integration_service.py  test_network_monitor.py  test_telemetry.py  test_telemetry_validation.py  test_user_settings.py
firmware_backup_20250824_042422/: CMakeLists.txt  test_api.sh
firmware_backup_20250824_042422/include/: diagnostics_manager.h  hal_config_persistence.h  hal_estop.h  hal_gpio.h  hal_led.h  hal_lidar.h  hal_network.h  hal_ota_update.h  hal_rs485.h  hal_usb_debug.h  led_manager.h  network_api.h  performance_manager.h  system_config.h  system_state_machine.h  websocket_server.h
firmware_backup_20250824_042422/scripts/: migration_helper.sh
firmware_backup_20250824_042422/src/: main.c
firmware_backup_20250824_042422/tools/: gpio_pin_verify.c
firmware_backup_20251007_112147/config/: CMakeLists.txt
firmware_new/: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  CLEANUP_PLAN.md  CMakeLists.txt  CODE_STRUCTURE.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_REPORT.md  EMBED_ISSUES_FIX_REPORT.md  ESTOP_ERROR_HANDLING_FIX_REPORT.md  FINAL_CLEANUP_REPORT.md  FIX_WIFI_REALTIME.md  FW_LOG_ANALYSIS.md  FW_TEAM_IMPLEMENTATION_CHECKLIST.md  HAL_TEST_REPAIR_REPORT.md  HARDWARE_VALIDATION_REPORT.md  INDEX.md  ISO_REORGANIZATION_SUMMARY.md  ISO_VISUAL_SUMMARY.md  MIGRATION_LOG_v1.0.1.md  PHASE2_PROGRESS_REPORT.md  PHASE3-1_FINAL_SUMMARY.md  PHASE3-1_PROGRESS_SUMMARY.md  PHASE3_BUILD_ERRORS_REPORT.md  PHASE3_BUILD_FIXES_SUMMARY.md  PHASE3_BUILD_ISSUES_SUMMARY.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_FINAL_COMPLETION_REPORT.md  PHASE3_FINAL_RELEASE_SUMMARY.md  PHASE3_PROGRESS_REPORT.md  README.md  TASKS_POWER_MODULE_IMPROVEMENT.md  TEST_REPORT.md  UART1_ISSUE_DIAGNOSIS.md  error_analysis_report.md  modules.yaml  rebuild.sh  (+12 more)
firmware_new/cmake/: BuildOptions.cmake  CompilerOptions.cmake  Dependencies.cmake  README.md
firmware_new/docs/: API_DOCUMENTATION.md  CLEANUP_FINAL_REPORT.md  CLEANUP_PLAN_ISO.md  CLEANUP_SUMMARY_FINAL.md  CMakeLists.txt  FIRMWARE_SLAVE_PORT_ISSUE_ANALYSIS.md  ISSUE_203_BUILD_COMPLETE.md  ISSUE_203_FINAL_SUMMARY.md  ISSUE_203_IMPLEMENTATION_SUMMARY.md  PHASE_8_SYSTEM_TESTING_DEPLOYMENT_REPORT.md  README.md  TEST_VALIDATION_REPORT.md
firmware_new/firmware_src/: main.c
firmware_new/include/: README.md  constants.h  module_registry.h  register_map.h  version.h.in
firmware_new/profiling_results/: PLAYBOOK_SU_CO.md  TEST_REPORT.md  ctest_list.txt  ctest_names.txt  ctest_output.txt  ctest_output_verbose.txt  ctest_output_verbose_full.txt  ctest_safety_latency_verbose.txt  execution_times.csv  memory_usage.csv  performance_report.md  soak_report.md  soak_report_20250909_184811_3m.md  test_times.csv
firmware_new/release/: PACKAGE_INFO.txt
firmware_new/scripts/: README.md  fix_mock_references.sh  implement_firmware_fixes.sh  migrate_core_structure.py  start_firmware.sh  test_firmware.sh  test_lidar_basic.sh
firmware_new/src/: CMakeLists.txt  main.c
firmware_new/static_analysis/: analysis-summary.txt  clang-tidy-report.txt  cppcheck-report.txt
firmware_new/tests/: CMakeLists.txt  Makefile  README.md  README_TESTS.md  test_register_metadata_api.c  test_websocket.py  test_websocket_multiple.py  test_websocket_proper.py  test_websocket_simple.py  test_websocket_stress.py  test_wifi_ap_stop_fix.sh
firmware_new/tools/: check_rs485_de_re.sh  debug_rs485.sh  fix_port_conflict.sh  run_firmware_with_slave.sh  run_slave_on_ttyS1.sh  slave_server_ttyS1.py  test_master_read_slave2.py  test_register_0x0100.py
(+2205 files in other folders)
